--- a/piano.css
+++ b/piano.css
@@ -32,7 +32,11 @@ html, body { height : 100%; }
 	width : 782px; 
 	background : #f33; 
 	border-radius : 20px; 
-	box-shadow : 0 1px 0 #999, 0 2px 0 #999, 0 3px 0 #999, 1px 4px 0 #999, 2px 5px 0 #999, 3px 6px 0 #999, 4px 7px 0 #999, 5px 8px 0 #999, 0 0 8px #000; 
+	box-shadow : 
+		  0 1px 0 #999, 0 2px 0 #999, 0 3px 0 #999, 1px 4px 0 #999 
+		, 2px 5px 0 #999, 3px 6px 0 #999, 4px 7px 0 #999, 5px 8px 0 #999 
+		, 0 0 8px #000 
+		; 
 	z-index : 2; 
 	} 
 
@@ -110,8 +114,8 @@ h1 {
 
 /** help */ 
 
-.loop, 
-.help { 
+  .loop 
+, .help { 
 	position : absolute; 
 	top : 25px; 
 	right : 42px; 
@@ -119,7 +123,9 @@ h1 {
 	height : 20px; 
 	color : transparent; 
 	background : rgba(255, 255, 255, .25); 
-	box-shadow : 1px 1px 0 rgba(0, 0, 0, .35), 1px 0 0 rgba(0, 0, 0, .35), 0 1px 0 rgba(0, 0, 0, .35), inset 1px 1px 0 rgba(255,255,255,.4); 
+	box-shadow : 
+		1px 1px 0 rgba(0, 0, 0, .35), 1px 0 0 rgba(0, 0, 0, .35), 0 1px 0 rgba(0, 0, 0, .35), inset 1px 1px 0 rgba(255,255,255,.4) 
+		; 
 	border-radius : 2px; 
 	z-index : 10; 
 	font-size : 12px; 
