--- a/piano.css
+++ b/piano.css
@@ -124,7 +124,10 @@ h1 {
 	color : transparent; 
 	background : rgba(255, 255, 255, .25); 
 	box-shadow : 
-		1px 1px 0 rgba(0, 0, 0, .35), 1px 0 0 rgba(0, 0, 0, .35), 0 1px 0 rgba(0, 0, 0, .35), inset 1px 1px 0 rgba(255,255,255,.4) 
+		  1px 1px 0 rgba(0, 0, 0, .35) 
+		, 1px 0 0 rgba(0, 0, 0, .35) 
+		, 0 1px 0 rgba(0, 0, 0, .35) 
+		, inset 1px 1px 0 rgba(255,255,255,.4) 
 		; 
 	border-radius : 2px; 
 	z-index : 10; 
